--- a/styleF.css
+++ b/styleF.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    color: wheat;
+    /* color: wheat; */
 }
 
 body{
@@ -193,11 +193,11 @@ border-radius: 20px;
    
     width: 100%;
     height: 100%;
-    border: 2px solid aliceblue;
+    /* border: 2px solid aliceblue; */
 
 }
 .recently-played{
-    border: 3px solid rgb(255, 0, 162);
+    /* border: 3px solid rgb(255, 0, 162); */
 
 }
 .heading{
@@ -214,6 +214,7 @@ border-radius: 20px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    color: white;
     border-radius: 15px;
     background-color: rgb(36, 36, 36);
 
@@ -223,7 +224,7 @@ border-radius: 20px;
     /* border: 3px solid rgb(4, 255, 175); */
 width: 100%;
 height: 200px;
-z-index: 2;
+/* z-index: 2; */
 border-radius: 15px;
 
 }
@@ -231,7 +232,7 @@ border-radius: 15px;
 .playbutton{
     /* display: none; */
     width: 60px;
-    z-index: 3;
+    /* z-index: 3; */
     position: relative;
     left: 50px;
     bottom: 50px;
@@ -250,4 +251,68 @@ display: flex;
 }
 .card-desc{
     
+}
+.albums {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.music_player{
+    /* border: 1px solid rgb(0, 225, 255); */
+   display: flex;
+   justify-content: start;
+  height: 85px;
+   /* align-items: center; */
+
+}
+.music-title img{
+    height: 100%;
+    margin-right: 10px;
+}
+.music-title{
+    /* border: 1px solid aliceblue; */
+    width: 25%;
+    overflow: hidden;
+    display: flex;
+    padding: 10px;
+}
+.player{
+    /* border: 1px solid red; */
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 10px;
+    
+}
+.player input{
+    width: 400px;
+}
+.player img{
+    height: 15px;
+}
+.musicbtns{
+    /* border: 1px solid rgb(0, 255, 98); */
+    width: 40%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+
+}
+.music-utilities{
+    /* border: 1px solid rgb(0, 255, 98); */
+    width: 25%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#progress::-webkit-slider-thumb{
+    /* display: none; */
+}
+#progress{
+    -webkit-appearance:none;
+    height: 5px;
+    border-radius: 20px;
+    background-color: gray;
 }
